# osh-tools

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  RELEASE.md  build-linux.sh  build-windows.bat  install.sh
.github/workflows/: release-linux.yml
config/: daemon.toml.example  devices.json
osh-cli/: Cargo.toml
osh-cli/src/: config.rs  lib.rs  main.rs  protocol.rs
osh-daemon/: Cargo.toml
osh-daemon-gui/: Cargo.toml  README.md
osh-daemon-gui/src/: main.rs
osh-daemon/src/: cmd_executor.rs  config.rs  daemon.rs  lib.rs  logger.rs  main.rs  protocol.rs  pty_manager.rs
osh-relay/: Cargo.toml
osh-relay/src/: device_store.rs  main.rs  protocol.rs  relay.rs  server.rs
