[workspace]
resolver = "2"
members = [
    "osh-relay",
    "osh-cli",
    "osh-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
futures-util = "0.3"
