[package]
name = "osh-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OSH CLI tools - osh and osh-admin commands"

[lib]
name = "osh_cli"
path = "src/lib.rs"

[[bin]]
name = "osh"
path = "src/main.rs"

[[bin]]
name = "osh-admin"
path = "src/bin/osh-admin.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
