[package]
name = "osh-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OSH Daemon - Local client for remote command execution"

[lib]
name = "osh_daemon"
path = "src/lib.rs"

[[bin]]
name = "osh-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
portable-pty = { workspace = true }
futures-util = { workspace = true }
futures = "0.3"
hostname = "0.4"
dirs = "5.0"
