[package]
name = "osh-relay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OSH Relay Service - WebSocket router for remote command execution"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
